--- a/content/posts/2022-08-16.md
+++ b/content/posts/2022-08-16.md
@@ -1,11 +1,10 @@
----
-title: 2022-08-16
-date: 2022-08-16
-draft: false
-tag: ["WORK", "DIARY"]
----
-
-
++++
+author = "crui"
+title = "2022-08-16"
+date = "2022-08-16"
+description = ""
+tags = ["diary", "work"]
++++
 
 - [x] 更新N100计划和风险
 - [x] 向刘昊说明新的工作模板
